# kumacli

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
src/kumacli/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
