[project]
name = "kumacli"
version = "0.1.0"
description = "CLI interface for Uptime Kuma"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uptime-kuma-api>=1.2.1",
]

[project.urls]
Readme = "https://pypi.org/project/kumacli/#description"
PyPI = "https://pypi.org/project/kumacli/"

[project.scripts]
kumacli = "kumacli.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kumacli"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
